Fixed mdl grid alignment issues

--- a/packages/sarai-pests/client/components/sarai-pests-id/index.less
+++ b/packages/sarai-pests/client/components/sarai-pests-id/index.less
@@ -278,10 +278,6 @@
 	margin: 0;
 }
 
-.mdl-grid{
-	margin: 0;
-}
-
 .results-header{
 	margin: auto;
 }
